@@ -1,3 +1,7 @@
+2001-08-18  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* testsuite/22_locale/operators.cc: Add test.
+	
 2001-08-17  Benjamin Kosnik  <bkoz@redhat.com>
 
 	Implement std::collate.	
